JumpScript/tests/baselines/reference/parserErrorRecoveryIfStatement1.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/IfStatements/parserErrorRecoveryIfStatement1.jump(4,3): error TS1109: Expression expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/IfStatements/parserErrorRecoveryIfStatement1.jump (1 errors) ====
    class Foo {
      f1() {
        if (
      }
      ~
!!! error TS1109: Expression expected.
      f2() {
      }
      f3() {
      }
    }